vlib/v/checker/tests/check_incompatible_struct.vv
struct Foo {
	b int
}

struct Bar {
	a int
	b int
}

fn main() {
	foo := Foo{2}
	bar := Bar{
		...foo
	}
	print(bar)
}
